# ablift

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  SKILL.md  example.ipynb  pyproject.toml  setup.py
ablift/: __init__.py  cli.py  connectors.py  engine.py  models.py  planning.py  reporting.py  text_parser.py
bayestest/: __init__.py  bayestest.py  cli.py  connectors.py  engine.py  models.py  reporting.py  text_parser.py
examples/: arpu_bayesian.csv  arpu_bayesian.xlsx  arpu_sequential_look3.csv  bookings.py  conversion_multivariant.csv  duration_inputs.csv  duration_inputs.xlsx  duration_mapping.json  mapping_arpu_bayes.json  mapping_arpu_seq_look3.json  mapping_conversion_bayes.json
scripts/: run_demo.sh
tests/: test_cli_analyze.py  test_cli_doctor.py  test_connectors.py  test_engine.py  test_planning.py
