[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayestest"
version = "0.3.0"
description = "CLI and Python toolkit for Bayesian and sequential A/B/n decisions"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Fabio-RibeiroB", email = "bradyfr@proton.me" },
]
dependencies = [
  "click>=8.0",
  "numpy>=1.22",
  "openpyxl>=3.1.0",
]

[dependency-groups]
test = [
  "pytest>=8.0",
  "scipy>=1.11",
  "statsmodels>=0.14",
]

[project.scripts]
bayestest = "bayestest.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["bayestest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bayestest]
method = "bayesian"
samples = 50000
random_seed = 7

[tool.bayestest.decision_policy]
enabled = false
