[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ablift"
version = "0.4.0"
description = "Agent-friendly CLI for Bayesian and sequential A/B/n experiment decisions"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Fabio-RibeiroB", email = "bradyfr@proton.me" },
]
dependencies = [
  "click>=8.0",
  "numpy>=1.22",
  "openpyxl>=3.1.0",
]

[dependency-groups]
test = [
  "pytest>=8.0",
  "scipy>=1.11",
  "statsmodels>=0.14",
]
lint = [
  "pre-commit>=4.0",
  "ruff>=0.11",
  "ty>=0.0.1a16",
]

[project.scripts]
ablift = "ablift.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ablift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.ty]

[tool.ty.src]
include = ["ablift"]

[tool.ablift]
method = "bayesian"
samples = 50000
random_seed = 7

[tool.ablift.decision_policy]
enabled = false
